
07/03/2002 (Evileye)
- Added more of the guild system functions - still incomplete, but
  nearly done. Save/load to be done last (must remain compat.)

08/03/2002 (evileye)
- Guild system load/save implemented. Converts old savefiles safely.

09/03/2002 (evileye)
- Sanity send / hp bug fixed.

14/03/2002 (evileye)
- IP banning filter added. (fixed at 5 mins just now.)

** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack :)

==== below this line are the unfixed bugs known ====
[B] rebooting server always make floors disappear;
    monsters are preserved; only cave disappears.
[B] Self-reproducing black trap (doesn't appear recently.. fixed??)
[B] Panic save often enters into infinite loop.
[B] House doors still seem to crash sometimes.
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
[B] /rec won't work if to wilderness? (admin)
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] [Bashing for beginners] contains 'Darkness Storm' etc.
[B] /dr cannot handle rings well.
[B] Macro stick sometimes
[B] CURSE_x does 100+ dmg on 50ft?

[B] 'I' or 'e' messes the screen inside stores (/* evil test */ stuff)
[B] log-file viewer(&6) leaves messy screen when done.

==== below this line are 'implementations' and not 'bugs' ====
(Don't 'fix' them!! ;)
+ sanity point is not shown
+ store beats price for non-*ID*ed items (esp.ego & randarts)
+ extra attack rings don't always give extra blows (esp.if heavy)
  (old ring{using pval} useless - sry I cannot help this. /wish?)
+ phase/recall may land you on water.
+ randarts lantern/torch may need fueling (and non-lit one doesn't give
  any resistances/abilities).

==== below this line are changes to be done in the future ====
[minor ones]
(3.3)
- recall-depth array for each dungeons/towers
- full colour-support in show_file